# AP-AutoSAR-Com-Stack

./: .gitignore  README.md  wiki.md
AAA_implementations/: CMakeLists.txt
AAA_implementations/src/ara/core/: array.h  future.h  map.h
AAA_implementations/src/ara/exec/: deterministic_client.h  function_group.h
AAA_implementations/test/ara/core/vector/: vector.cpp
Adaptive-AutoSAR-Com-Stack/: .gitignore  CMakeLists.txt  README.md
Adaptive-AutoSAR-Com-Stack/src/: app.cpp
Adaptive-AutoSAR-Com-Stack/src/ara/core/: StdCppImplementationDataType.h  Std_Types.h  array.h  coreTypes.md  instance_specifier.cpp  instance_specifier.h  instance_specifier_test.cpp  map.h  vector.h
Adaptive-AutoSAR-Com-Stack/src/ara/core/other/: ErrorCode.h  Futher.h  Result.h
Adaptive-AutoSAR-Com-Stack/src/ara/exec/: deterministic_client.cpp  exec_exception.cpp  exec_exception.h  function_group.cpp  function_group_state.cpp  worker_thread.h
Adaptive-AutoSAR-Com-Stack/src/ara/exec/doc/: umlet.uxf
Adaptive-AutoSAR-Com-Stack/test/ara/core/array/: array_test.cpp
Adaptive-AutoSAR-Com-Stack/test/ara/core/sqrt/: sqrt.cpp  sqrt_test.cpp
Adaptive-AutoSAR-Com-Stack/test/ara/core/vector/: vector.cpp
Adaptive-AutoSAR-Com-Stack/test/server/: client.cpp
Notes/: 00_AP Overall Design And key Concepts.html  EM.html  Execution Mangement.html  Exp of AP SW Architecture.html  FO.html  GP_Diagram.drawio  proejct Logical Diagram.html  swc core types.html
gp-app/: GPS.drawio  overview.pptx
gp-app/Presentation/: ARA Proposal.docx
gp-app/Presentation/samir pres/: document.txt
gp-app/code/DHT11_test/: DHT11_test.ino
gp-app/code/DHT11_test/DHT11_test_adafruit.ino/: DHT11_test_adafruit.ino.ino
gp-app/code/GPS_Testing/gps_test/: gps_test.ino
gp-app/code/Live-GPS-Tracker-using-Raspberry-Pi-and-Neo-6m-GPS-module-with-Firebase-main/: README.md  firebase_config  gps_send.py  index.html  map.css
gp-app/code/gp-demo-code/demo_gps_touch_screen/src/ara/core/: StdCppImplementationDataType.h  array.h  coreTypes.md  instance_specifier.cpp  map.h  vector.h
gp-app/code/gp-demo-code/demo_gps_touch_screen/test/server/: client  client.cpp  clientRaspiBin  server  server.cpp  serverRaspiBin
mentor-sessions-tasks/sessions/EXEC Video/: Execution_manager_AA.odp  execution_manager.cpp  start_stop_app.cpp  thread_mang.cpp
src/ara/core/: instance_specifier.h  promise.h  vector.h
src/ara/exec/: exec_error_domain.cpp  execution_client.cpp  execution_client.h  function_group_state.h  state_client.cpp  state_client.h
test/ara/core/: instance_specifier_test.cpp
test/ara/core/array/: array_test.cpp
test/ara/core/map/: map_main.cpp
(+5 files in other folders)
